
    HADOOP-8310. FileContext#checkPath should handle URIs with no port. (atm)

    HADOOP-8906. paths with multiple globs are unreliable. (Daryn Sharp via
    jlowe)

    HADOOP-8962. RawLocalFileSystem.listStatus fails when a child filename
    contains a colon (jlowe via bobby)

    HADOOP-8986. Server$Call object is never released after it is sent (bobby)

Release 0.23.4 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-8822. relnotes.py was deleted post mavenization (bobby)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-8843. Old trash directories are never deleted on upgrade
    from 1.x (jlowe)

    HADOOP-8684. Deadlock between WritableComparator and WritableComparable.
    (Jing Zhao via suresh)

    HADOOP-8183. Stop using "mapred.used.genericoptions.parser" (harsh)

    HADOOP-8623. hadoop jar command should respect HADOOP_OPTS.
    (Steven Willis via suresh)

Release 0.23.3

  INCOMPATIBLE CHANGES

    HADOOP-7967. Need generalized multi-token filesystem support (daryn)

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-8108. Move method getHostPortString() from NameNode to NetUtils.
    (Brandon Li via jitendra and bobby)

    HADOOP-8288. Remove references of mapred.child.ulimit etc. since they are
    not being used any more (Ravi Prakash via bobby)

    HADOOP-8373. Port RPC.getServerAddress to 0.23 (Daryn Sharp via bobby)

    HADOOP-8535. Cut hadoop build times in half (Job Eagles via bobby)

    HADOOP-8450. Remove src/test/system. (eli)

    HADOOP-8350. Improve NetUtils.getInputStream to return a stream which has
    a tunable timeout. (todd)

    HADOOP-8525. Provide Improved Traceability for Configuration (bobby)

    HADOOP-8242. AbstractDelegationTokenIdentifier: add getter methods
    for owner and realuser. (Colin Patrick McCabe via eli)

    HADOOP-8700.  Use enum to define the checksum constants in DataChecksum.
    (szetszwo)

    HADOOP-8240. Add a new API to allow users to specify a checksum type